--- a/app/src/main/res/layout/activity_compose.xml
+++ b/app/src/main/res/layout/activity_compose.xml
@@ -31,5 +31,8 @@
         android:layout_alignParentEnd="true"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="5dp"
+        android:layout_marginStart="5dp"
+        android:background="@color/twitter_blue"
+        android:textColor="@color/white"
         android:text="@string/tweet" />
 </com.google.android.material.textfield.TextInputLayout>
